docs: fic doc swagger
